# jbwl

./: .gitignore  README.md  pyproject.toml
src/bond_network/: api.py  cli.py  constants.py  daemon_cli.py  database.py  engine.py  infer.py  mcp_server.py  models.py  scenarios.py  sdk.py
src/bond_network.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bond_network/static/: app.js  index.html  style.css
tests/: test_integration.py
