[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bond-network"
version = "0.1.0"
description = "Agent bond network management system"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "uvicorn>=0.25",
    "mcp>=1.0",
    "fastapi>=0.109",
    "websockets>=12.0",
]

[project.scripts]
bond = "bond_network.cli:main"
bondd = "bond_network.daemon_cli:main"
bond-mcp = "bond_network.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
